- Add settings persistence & update logic

--- a/XCIWeather/Base.lproj/Main.storyboard
+++ b/XCIWeather/Base.lproj/Main.storyboard
@@ -68,11 +68,16 @@
                             </containerView>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aIv-64-wuN">
                                 <rect key="frame" x="0.0" y="597" width="414" height="216"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </pickerView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AGZ-SF-fb5">
                                 <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items>
-                                    <barButtonItem style="plain" systemItem="done" id="Vq3-4h-CUO"/>
+                                    <barButtonItem style="plain" systemItem="save" id="Vq3-4h-CUO">
+                                        <connections>
+                                            <action selector="doneBarButton_TouchUpInside:" destination="6ZG-Wz-ieA" id="W5Y-LI-6c0"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
@@ -92,6 +97,7 @@
                         <viewLayoutGuide key="safeArea" id="0s0-NJ-LsT"/>
                     </view>
                     <connections>
+                        <outlet property="saveActionToolbar" destination="AGZ-SF-fb5" id="oIg-qv-9gn"/>
                         <outlet property="settingPicker" destination="aIv-64-wuN" id="zkr-Jy-Fql"/>
                         <outlet property="tableViewContainer" destination="HCY-4a-8lV" id="vf5-JU-ds8"/>
                     </connections>
@@ -199,7 +205,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eu0-YY-Xdg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-922" y="746"/>
+            <point key="canvasLocation" x="-1068" y="746"/>
         </scene>
         <!--Forecast-->
         <scene sceneID="Qz0-hh-ZpO">
